# orca-rs

./: .gitignore  Cargo.toml  README.md  operator_config.txt
.github/workflows/: build.yml
src/: context.rs  event_handling.rs  main.rs  midi.rs  note_events.rs  operators.rs  sampler.rs  synth.rs  ui.rs  utils.rs
